mdapi/objects/di_Binding__mdt.object
<CustomObject>
    <label>Binding</label>
    <pluralLabel>Bindings</pluralLabel>
    <fields>
        <fullName>BindingObjectAlternate__c</fullName>
        <description>Use this field to specify the SObject API name to bind to when the &quot;Binding Object&quot; field does not list that particular SObject.  Only specify the &quot;Binding Object&quot; field or this one; not both.</description>
        <inlineHelpText>Use this field to specify the SObject API name to bind to when the &quot;Binding Object&quot; field does not list that particular SObject.  Only specify the &quot;Binding Object&quot; field or this one; not both.</inlineHelpText>
        <label>Binding Object Alternate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BindingObject__c</fullName>
        <label>Binding Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Bindings</relationshipLabel>
        <relationshipName>Bindings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>BindingSequence__c</fullName>
        <label>Binding Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                    <default>true</default>
                    <label>Apex</label>
                </value>
                <value>
                    <fullName>LightningComponent</fullName>
                    <label>Lightning Component</label>
                </value>
                <value>
                    <fullName>VisualforceComponent</fullName>
                    <label>Visualforce Component</label>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Module</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>BindObj_Or_BindObjAlt</fullName>
        <active>true</active>
        <description>This validation rule ensures that only the &quot;Binding Object&quot; or the &quot;Binding Object Alternate&quot; field is specified and not both.</description>
        <errorConditionFormula>NOT( ISBLANK( BindingObject__c ) ) &amp;&amp; NOT( ISBLANK( BindingObjectAlternate__c ) )</errorConditionFormula>
        <errorMessage>Only specify the &quot;Binding Object&quot; field or the &quot;Binding Object Alternate&quot; field; not both.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>BindingObject__c</columns>
        <columns>BindingObjectAlternate__c</columns>
        <columns>BindingSequence__c</columns>
        <columns>To__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>